Bug 46518 - UI: Header, footer & and page break indicators in multipage view
Summary: UI: Header, footer & and page break indicators in multipage view
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: x86-64 (AMD64) Linux (All)
: high normal
Assignee: Not Assigned
URL: http://wiki.documentfoundation.org/im...
Whiteboard: BSA target:3.6.1
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-23 05:42 UTC by Janne Uusitalo
Modified: 2013-08-16 18:52 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janne Uusitalo 2012-02-23 05:42:41 UTC
Problem description: the behavior of the blue indicators for page breaks (button + dashed line) and header & footer areas leads to a UX nightmare when having multiple pages visible in the view layout. I have attached a video screenshot demonstrating all that goes on while I am simply trying to copy and paste some text frames from one page to another.

Steps to reproduce:
1. In Writer, open up or create a document that has multiple pages and some page breaks between them. (In mine, there is one for every page.)
2. In the View > Zoom… menu, set the View layout to 'Automatic' and adjust the Zoom factor so that your pages go into 3–4 columns.
3. Scroll around and edit the content on the pages any ways you want, and try not to be annoyed by Writer's…

Current behavior: which, at least for me, includes 1) the inconsistent placement and flickering of the blue page break buttons, 2) the header and footer area indicators popping up obtrusively when you hover near the top or bottom of the page, and 3) Writer losing track of where the focus/scroll status should be, bouncing the view up/down on its own.

Expected behavior: none of the above.

Platform: LibreOffice 3.5.0 Build 350m1 (Build:13) running on an up-to-date Ubuntu 12.04 (Precise Pangolin).
Comment 1 Janne Uusitalo 2012-02-23 06:07:51 UTC
Trying to attach a seven-megabyte video wasn't the best of ideas, it seems. Here's a URL, instead, to the video I screenshot to illustrate the problem:

http://youtu.be/qiKr-rLhaag

Thanks in advance for everyone interested to have a look at what's going on.
Comment 2 Christopher Yeleighton 2012-03-25 10:35:41 UTC
(In reply to comment #0)
> Problem description: the behavior of the blue indicators for page breaks
> (button + dashed line) and header & footer areas leads to a UX nightmare when
> having multiple pages visible in the view layout. I have attached a video

Please attach the document you were editing.
Comment 3 Janne Uusitalo 2012-03-29 03:06:33 UTC
(In reply to comment #2)

> Please attach the document you were editing.

Unfortunately the document I'm editing in the video doesn't exist anymore. (I finished the project with Scribus.)

J.
Comment 4 Roman Eisele 2012-05-02 03:00:24 UTC
Seems related to bug 44725 - "VIEWING: Heading - Footer - Pagebreak lines appear somewhere in the page".
Comment 5 Roman Eisele 2012-05-02 07:36:29 UTC
Also related to bug 46141 - "UI: Header/footer prompts should only appear if user clicks in header/footer area".
Comment 6 Jelte 2012-08-12 19:39:22 UTC
I'd like to second this, I'm working on a large document and have been since long before this release but the header/footer tab almost makes editing the document unworkable. 

I'd very much want a configuration option to turn this feature off, as I typically only edit headers and footers once. IMHO this does not warrant a popup like tab as is implemented now.

Apart for UI preferences, rendering of the tab is also very buggy and intermittent in multi page view. I also have the strong impression that it hampers the scrolling of the text, it has been very choppy since introduction of the header/footer tab.

Please advice me of any information you might need to fix or adjust this feature, I will happily provide it.
Comment 7 Not Assigned 2012-08-13 15:25:12 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbb047527d856258b7b925dc37f56f0e9b0b3e90&g=libreoffice-3-6

Page Break: don't show if mouse is gone and button is still invisible (fdo#46518)


It will be available in LibreOffice 3.6.1.
Comment 8 Roman Eisele 2012-08-29 11:36:59 UTC
(In reply to comment #7)
> Ivan Timofeev committed a patch related to this issue.
> It has been pushed to "libreoffice-3-6":

For the record (and for curious people like me):
This fix is also in the master branch, see

http://cgit.freedesktop.org/libreoffice/core/commit/?id=61df142e9398dee581935a4967f50ba0bd1d5235

"Page Break: don't show if mouse is gone and button is still invisible"


Cf. also 

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a7b26dbf7b4c59b34fed9957c32a41348bfd6f77

"Page Break: set position only when button is invisible
and don't let the moribund fading-out button pursue the mouse"
Comment 9 tommy27 2013-07-30 20:52:20 UTC
I cannot test Linux. do you still experience the bug in 4.0.x and 4.1.x releases? a fix has been included in 3.6.1
Comment 10 Janne Uusitalo 2013-08-16 18:52:29 UTC
I cannot reproduce any of the reported symptoms in 4.0.2.2, Ubuntu 13.04. The header and footer area indicators now flicker for a moment before appearing or disappearing, but since they do so on mouse-click and not on hover, the annoyance is minor and should be (if hasn't already been) filed separately.