Page Break: don't show if mouse is gone and button is still invisible (fdo#46518)

it seems when the mouse leaves the dashed line, it immediately appears inside
a button (if the mouse motion is not super-fast).

Change-Id: I43c792fdba59feafd761bde8529a8683c07bf3d3

Signed-off-by: Petr Mladek <pmladek@suse.cz>